# icu-mortality-insight

./: .gitignore  README.md  pyproject.toml
data/: README.md
docs/: model_card.md
models/: README.md
reports/: README.md
src/icu_mortality_insight/: __init__.py  config.py  data.py  evaluation.py  explainability.py  features.py  inference.py  pipeline.py  train.py
tests/: test_data.py  test_training.py
